...
				.padding()

			VStack(spacing: 8) {
				Button(action: {
					activeSheet = .configuration
				}) {
					Text("Configuration (Code only)")
						.bold()
				}
				.buttonStyle(RoundedRectangleButtonStyle(backgroundColor: .red))

				Button(action: {
					activeSheet = .plist
...
