...
		configuration.accentTitle = "WhatsNewView"
		configuration.description = """
This view can help you give that extra information your user needs at certain points in your app.
"""

		configuration.features = features
		configuration.buttonTitle = "OK"
		configuration.buttonAction = {
			print("Button tapped.")
		}
		configuration.dismissAction = {
			print("View was dismissed.")
		}
...
